--- a/definitions/data_preprocessing.ipynb
+++ b/definitions/data_preprocessing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "ff8019b0-3a9d-4e86-b6fc-87b3e65eeb5b",
    "metadata": {},
    "outputs": [],
@@ -24,23 +24,187 @@
     "\n",
     "import ast\n",
     "import networkx as nx\n",
-    "import pickle"
+    "import pickle\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "id": "7569df9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Publication category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A new blood DNA methylation signature for Kool...</td>\n",
+       "      <td>[Genetic syndromes]</td>\n",
+       "      <td>Genetic syndromes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A polyepigenetic glucocorticoid exposure score...</td>\n",
+       "      <td>[Lifestyle and environment]</td>\n",
+       "      <td>Lifestyle and environment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ASXL1 mutations that cause Bohring Opitz Syndr...</td>\n",
+       "      <td>[Genetic syndromes]</td>\n",
+       "      <td>Genetic syndromes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>An HNRNPK-specific DNA methylation signature m...</td>\n",
+       "      <td>[Genetic syndromes]</td>\n",
+       "      <td>Genetic syndromes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Association of Maternal Tobacco Use During Pre...</td>\n",
+       "      <td>[Lifestyle and environment, Lifestyle and envi...</td>\n",
+       "      <td>Lifestyle and environment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>The association of DNA methylation with body m...</td>\n",
+       "      <td>[Lifestyle and environment, Lifestyle and envi...</td>\n",
+       "      <td>Lifestyle and environment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>The detection of a strong episignature for Chu...</td>\n",
+       "      <td>[Genetic syndromes, Genetic syndromes]</td>\n",
+       "      <td>Genetic syndromes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>The discovery of the DNA methylation episignat...</td>\n",
+       "      <td>[Genetic syndromes]</td>\n",
+       "      <td>Genetic syndromes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>The phenotypic spectrum and genotype-phenotype...</td>\n",
+       "      <td>[Genetic syndromes]</td>\n",
+       "      <td>Genetic syndromes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>The spectrum of rare central nervous system (C...</td>\n",
+       "      <td>[Cancer]</td>\n",
+       "      <td>Cancer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>89 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Title  \\\n",
+       "0   A new blood DNA methylation signature for Kool...   \n",
+       "1   A polyepigenetic glucocorticoid exposure score...   \n",
+       "2   ASXL1 mutations that cause Bohring Opitz Syndr...   \n",
+       "3   An HNRNPK-specific DNA methylation signature m...   \n",
+       "4   Association of Maternal Tobacco Use During Pre...   \n",
+       "..                                                ...   \n",
+       "84  The association of DNA methylation with body m...   \n",
+       "85  The detection of a strong episignature for Chu...   \n",
+       "86  The discovery of the DNA methylation episignat...   \n",
+       "87  The phenotypic spectrum and genotype-phenotype...   \n",
+       "88  The spectrum of rare central nervous system (C...   \n",
+       "\n",
+       "                                             Category  \\\n",
+       "0                                 [Genetic syndromes]   \n",
+       "1                         [Lifestyle and environment]   \n",
+       "2                                 [Genetic syndromes]   \n",
+       "3                                 [Genetic syndromes]   \n",
+       "4   [Lifestyle and environment, Lifestyle and envi...   \n",
+       "..                                                ...   \n",
+       "84  [Lifestyle and environment, Lifestyle and envi...   \n",
+       "85             [Genetic syndromes, Genetic syndromes]   \n",
+       "86                                [Genetic syndromes]   \n",
+       "87                                [Genetic syndromes]   \n",
+       "88                                           [Cancer]   \n",
+       "\n",
+       "         Publication category  \n",
+       "0           Genetic syndromes  \n",
+       "1   Lifestyle and environment  \n",
+       "2           Genetic syndromes  \n",
+       "3           Genetic syndromes  \n",
+       "4   Lifestyle and environment  \n",
+       "..                        ...  \n",
+       "84  Lifestyle and environment  \n",
+       "85          Genetic syndromes  \n",
+       "86          Genetic syndromes  \n",
+       "87          Genetic syndromes  \n",
+       "88                     Cancer  \n",
+       "\n",
+       "[89 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(f'{assets_directory}/Publications_network.pkl', 'rb') as file:\n",
+    "        G = pickle.load(file)\n",
+    "\n",
+    "    # Convert to pandas dataframe\n",
+    "    edges_df = nx.to_pandas_edgelist(G)\n",
+    "\n",
+    "    # Select Author nodes\n",
+    "    edges_df = edges_df.loc[edges_df.source.str.startswith('Author'), ]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "e4d4a974-cbdb-43da-af7b-582845b4c988",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Serena/Desktop/DEMETRA/DeMetRA-review/demetra_venv/lib/python3.9/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  warn(msg)\n",
-      "/Users/Serena/Desktop/DEMETRA/DeMetRA-review/demetra_venv/lib/python3.9/site-packages/openpyxl/worksheet/_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  warn(msg)\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m assets_directory \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../assets/\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 3\u001b[0m lit, base_ss, base_va \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_excel(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00massets_directory\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mMPS_review_systematic_2025-02-14.xlsx\u001b[39m\u001b[38;5;124m'\u001b[39m, sheet_name\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m])\u001b[38;5;241m.\u001b[39mvalues()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# lit = lit.loc[lit.Include == 'Yes'].drop('Include', axis=1) # All included\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# print(lit.shape, '\\n', list(lit.columns))\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# print(base_ss.shape, '\\n', list(base_ss.columns))\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# print(base_va.shape, '\\n', list(base_va.columns))\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -66,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "e35eac17-3145-4027-8ad6-a56e07c9690c",
    "metadata": {
     "collapsed": true,
@@ -198,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "d6616b2e-205f-4f33-aa09-ea8b381fb2d9",
    "metadata": {},
    "outputs": [],
@@ -225,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "fca1748c",
    "metadata": {},
    "outputs": [
@@ -424,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "b66abae5",
    "metadata": {},
    "outputs": [
@@ -650,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "c1865ebc",
    "metadata": {},
    "outputs": [
@@ -855,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "bcc2eb79",
    "metadata": {},
    "outputs": [
@@ -916,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "459d3e58",
    "metadata": {},
    "outputs": [],
@@ -941,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "ed7e1d62",
    "metadata": {},
    "outputs": [],
@@ -974,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "7f762a03",
    "metadata": {},
    "outputs": [
@@ -995,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "6f998bbf",
    "metadata": {},
    "outputs": [],
@@ -1007,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "3e34d2c9",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "f660d332-52e8-4c2f-bb20-7f24760d2136",
    "metadata": {
     "scrolled": true
@@ -1085,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "c5453078-5cf4-4e5f-964b-586f2ca811ec",
    "metadata": {},
    "outputs": [
