target-base sankey edit

--- a/definitions/data_preprocessing.ipynb
+++ b/definitions/data_preprocessing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "7569df9f",
    "metadata": {},
    "outputs": [
@@ -55,140 +55,78 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Title</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Publication category</th>\n",
+       "      <th>Percent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>What_is_available</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A new blood DNA methylation signature for Kool...</td>\n",
-       "      <td>[Genetic syndromes]</td>\n",
-       "      <td>Genetic syndromes</td>\n",
+       "      <th>EWAS summary statistics</th>\n",
+       "      <td>15</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A polyepigenetic glucocorticoid exposure score...</td>\n",
-       "      <td>[Lifestyle and environment]</td>\n",
-       "      <td>Lifestyle and environment</td>\n",
+       "      <th>Only phenotype</th>\n",
+       "      <td>58</td>\n",
+       "      <td>59.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ASXL1 mutations that cause Bohring Opitz Syndr...</td>\n",
-       "      <td>[Genetic syndromes]</td>\n",
-       "      <td>Genetic syndromes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>An HNRNPK-specific DNA methylation signature m...</td>\n",
-       "      <td>[Genetic syndromes]</td>\n",
-       "      <td>Genetic syndromes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Association of Maternal Tobacco Use During Pre...</td>\n",
-       "      <td>[Lifestyle and environment, Lifestyle and envi...</td>\n",
-       "      <td>Lifestyle and environment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>The association of DNA methylation with body m...</td>\n",
-       "      <td>[Lifestyle and environment, Lifestyle and envi...</td>\n",
-       "      <td>Lifestyle and environment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>The detection of a strong episignature for Chu...</td>\n",
-       "      <td>[Genetic syndromes, Genetic syndromes]</td>\n",
-       "      <td>Genetic syndromes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>The discovery of the DNA methylation episignat...</td>\n",
-       "      <td>[Genetic syndromes]</td>\n",
-       "      <td>Genetic syndromes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>The phenotypic spectrum and genotype-phenotype...</td>\n",
-       "      <td>[Genetic syndromes]</td>\n",
-       "      <td>Genetic syndromes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
-       "      <td>The spectrum of rare central nervous system (C...</td>\n",
-       "      <td>[Cancer]</td>\n",
-       "      <td>Cancer</td>\n",
+       "      <th>Validated MPS algorithm</th>\n",
+       "      <td>25</td>\n",
+       "      <td>26.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>89 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                Title  \\\n",
-       "0   A new blood DNA methylation signature for Kool...   \n",
-       "1   A polyepigenetic glucocorticoid exposure score...   \n",
-       "2   ASXL1 mutations that cause Bohring Opitz Syndr...   \n",
-       "3   An HNRNPK-specific DNA methylation signature m...   \n",
-       "4   Association of Maternal Tobacco Use During Pre...   \n",
-       "..                                                ...   \n",
-       "84  The association of DNA methylation with body m...   \n",
-       "85  The detection of a strong episignature for Chu...   \n",
-       "86  The discovery of the DNA methylation episignat...   \n",
-       "87  The phenotypic spectrum and genotype-phenotype...   \n",
-       "88  The spectrum of rare central nervous system (C...   \n",
-       "\n",
-       "                                             Category  \\\n",
-       "0                                 [Genetic syndromes]   \n",
-       "1                         [Lifestyle and environment]   \n",
-       "2                                 [Genetic syndromes]   \n",
-       "3                                 [Genetic syndromes]   \n",
-       "4   [Lifestyle and environment, Lifestyle and envi...   \n",
-       "..                                                ...   \n",
-       "84  [Lifestyle and environment, Lifestyle and envi...   \n",
-       "85             [Genetic syndromes, Genetic syndromes]   \n",
-       "86                                [Genetic syndromes]   \n",
-       "87                                [Genetic syndromes]   \n",
-       "88                                           [Cancer]   \n",
-       "\n",
-       "         Publication category  \n",
-       "0           Genetic syndromes  \n",
-       "1   Lifestyle and environment  \n",
-       "2           Genetic syndromes  \n",
-       "3           Genetic syndromes  \n",
-       "4   Lifestyle and environment  \n",
-       "..                        ...  \n",
-       "84  Lifestyle and environment  \n",
-       "85          Genetic syndromes  \n",
-       "86          Genetic syndromes  \n",
-       "87          Genetic syndromes  \n",
-       "88                     Cancer  \n",
-       "\n",
-       "[89 rows x 3 columns]"
+       "                         Title  Percent\n",
+       "What_is_available                      \n",
+       "EWAS summary statistics     15     15.0\n",
+       "Only phenotype              58     59.0\n",
+       "Validated MPS algorithm     25     26.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open(f'{assets_directory}/Publications_network.pkl', 'rb') as file:\n",
-    "        G = pickle.load(file)\n",
+    "assets_directory = '../assets/'\n",
+    "data = pd.read_csv(f'{assets_directory}/MPS_literature_cleaned.csv', parse_dates=['Date'])\n",
     "\n",
-    "    # Convert to pandas dataframe\n",
-    "    edges_df = nx.to_pandas_edgelist(G)\n",
     "\n",
-    "    # Select Author nodes\n",
-    "    edges_df = edges_df.loc[edges_df.source.str.startswith('Author'), ]\n"
+    "pubs_count = data.groupby('What_is_available')['Title'].nunique().reset_index().set_index('What_is_available')\n",
+    "\n",
+    "# Add a column for the percentage of all titles\n",
+    "total_titles = pubs_count['Title'].sum()\n",
+    "pubs_count['Percent'] = round((pubs_count['Title'] / total_titles) * 100)\n",
+    "\n",
+    "# Display the result\n",
+    "pubs_count # .loc['Only phenotype', 'Percent']\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d9c2fc6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbeb4d5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
