--- a/definitions/data_preprocessing.ipynb
+++ b/definitions/data_preprocessing.ipynb
@@ -5381,7 +5381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "demetra_venv",
+   "display_name": "demetra_venv (3.9.1)",
    "language": "python",
    "name": "python3"
   },
